<resources>
    <string name="app_name">FPSGame</string>
    <string name="start">START</string>
    <string name="how_to">HOW TO</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="volume">VOLUME:</string>
    <string name="sound_effect">SOUND EFFECT:</string>
    <string name="back">BACK</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>
    <string name="backward">BACKWARD</string>
    <string name="forward">FORWARD</string>
    <string name="shoot">ATTACK</string>
    <string name="kill_count">KILL: 0</string>
    <string name="string_left"><![CDATA[<]]></string>
    <string name="string_right"><![CDATA[>]]></string>
    <string name="game_name">NAME : TBD&#160;</string>
    <string name="game_email">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;E-MAIL : xzniu@dundee.ac.uk</string>
    <string name="game_author">&#160;AUTHOR : @xyzniu</string>
    <string name="game_version">&#160;VERSION : Alpha V1</string>
    <string name="flip_horizontal">FLIP HORIZONTAL:</string>
</resources>
