<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/btn_start"
                android:text="@string/start"
                android:onClick="goToGamePage"/>

        <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/btn_howto"
                android:text="@string/how_to"
                android:onClick="goToHowtoPage"/>

        <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/btn_settings"
                android:text="@string/settings"
                android:onClick="goToSettingsPage"/>

        <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/btn_about"
                android:text="@string/about"
                android:onClick="goToAboutPage"/>

        <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/btn_exit"
                android:text="@string/exit"
                android:onClick="exit"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>